k8s/read-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-service-deployment
  labels:
    app: read-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: read-service
  template:
    metadata:
      labels:
        app: read-service
    spec:
      containers:
        - name: read-service
          image: read-service:0.2.0
          ports:
            - containerPort: 3000
