k8s/write-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-service-deployment
  labels:
    app: write-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: write-service
  template:
    metadata:
      labels:
        app: write-service
    spec:
      containers:
        - name: write-service
          image: write-service:0.1.0
          ports:
            - containerPort: 3001
