k8s/analytics-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-postgres
spec:
  clusterIP: None
  selector:
    app: analytics-postgres
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: analytics-postgres
spec:
  serviceName: analytics-postgres
  replicas: 1
  selector:
    matchLabels:
      app: analytics-postgres
  template:
    metadata:
      labels:
        app: analytics-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/18/docker
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
