k8s/read-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: read-service
  labels:
    app: read-service
spec:
  selector:
    app: read-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
