k8s/write-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-service
  labels:
    app: write-service
spec:
  selector:
    app: write-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
